--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <style media="screen"> 
      body {
          margin: 0;
-         border: 10px solid #192b36;
 
 
      }
@@ -30,11 +29,12 @@
     </style>
 </head>
 <body>
-   <img src="header.jpg" alt="">
-   <img src="hero.jpg" alt="">
-   <img src="acustica.jpg" alt="">
-   <img src="clasica.jpg" alt="">
-   <img src="footer.jpg" alt="">
+ 
+    <h1>MAster</h1>
     <img src="invie-responsive.png" alt="" id="responsive">
+    <img src="header.jpg" alt="">
+    <img src="hero.jpg" alt="">
+    <img src="acustica.jpg" alt="">
+    <img src="clasica.jpg" alt="">
 </body>
 </html>
