--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
  
-    <h1>MAster</h1>
+    <h1>Master</h1>
     <img src="invie-responsive.png" alt="" id="responsive">
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
